# FlamingGryphonOP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml
.github/workflows/: docker-publish.yml
accounts/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  settings_test.py  urls.py  wsgi.py
legacy_data/: gryphony_OP.sql
op/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  tests_awards_events.py  tests_courtlist.py  tests_crud.py  tests_import.py  tests_polish.py  tests_recommendations.py  tests_reports.py  tests_views.py  urls.py  views.py
op/management/commands/: import_legacy_sql.py  sync_midrealm_op.py
op/migrations/: 0001_initial.py  0002_event_group_honor_honorimage_recipient_bestowal_and_more.py  0003_recommendation.py  0004_report.py  0005_midrealm_award.py  0006_bestowal_uncertain_dates_beginning.py
op/static/op/css/: baronial.css
op/templatetags/: op_filters.py
templates/: base.html
templates/accounts/: login.html  pending.html  register.html  register_success.html
templates/op/: bestowal_batch.html  bestowal_form.html  court_list.html  court_list_detail.html  court_list_print.html  event_detail.html  event_form.html  event_list.html  honor_detail.html  honor_form.html  honor_list.html  index.html  my_reports.html  recipient_detail.html  recipient_form.html  recipient_list.html  recipient_list_partial.html  recommendation_detail.html  recommendation_form.html  recommendation_list.html  report_detail.html  report_form.html  report_list.html
templates/op/partials/: batch_row.html  duplicate_warning.html  quick_recipient_form.html  recipient_autocomplete.html  recipient_selected.html
