[project]
name = "wh-op"
version = "0.1.0"
description = "Order of Precedence for the Barony of the Flaming Gryphon (SCA)"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "django-stubs>=5.2.9",
    "django-stubs-ext>=5.2.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["op.tests*", "accounts.tests*", "conftest"]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py", "tests_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
